--- a/TMDB/Base.lproj/Main.storyboard
+++ b/TMDB/Base.lproj/Main.storyboard
@@ -1,24 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="E0S-y4-zWF">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--TMDB-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TMDB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0kE-J4-U0B">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cET-l5-oUJ" userLabel="PopularContainer">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="500"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="500" id="gl0-PE-ksR"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FDt-mv-ubV" userLabel="UpcomingContainer">
+                                        <rect key="frame" x="0.0" y="520" width="414" height="500"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="500" id="2BR-Fk-Njd"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="cET-l5-oUJ" firstAttribute="leading" secondItem="5BU-04-nsL" secondAttribute="leading" id="3eC-qZ-lMX"/>
+                                    <constraint firstItem="FDt-mv-ubV" firstAttribute="bottom" secondItem="5BU-04-nsL" secondAttribute="bottom" id="6nI-i1-ttM"/>
+                                    <constraint firstItem="FDt-mv-ubV" firstAttribute="bottom" secondItem="1Ta-vp-gek" secondAttribute="bottom" constant="246" id="CNE-OI-Spl"/>
+                                    <constraint firstItem="cET-l5-oUJ" firstAttribute="width" secondItem="1Ta-vp-gek" secondAttribute="width" id="HpG-eo-NfJ"/>
+                                    <constraint firstItem="cET-l5-oUJ" firstAttribute="top" secondItem="1Ta-vp-gek" secondAttribute="top" id="KZa-i3-G2q"/>
+                                    <constraint firstItem="FDt-mv-ubV" firstAttribute="trailing" secondItem="5BU-04-nsL" secondAttribute="trailing" id="LnF-GQ-BFL"/>
+                                    <constraint firstItem="FDt-mv-ubV" firstAttribute="width" secondItem="1Ta-vp-gek" secondAttribute="width" id="WrV-uB-SJE"/>
+                                    <constraint firstItem="cET-l5-oUJ" firstAttribute="top" secondItem="5BU-04-nsL" secondAttribute="top" id="Zy7-aS-44h"/>
+                                    <constraint firstItem="FDt-mv-ubV" firstAttribute="leading" secondItem="5BU-04-nsL" secondAttribute="leading" id="cnz-tD-m6s"/>
+                                    <constraint firstItem="FDt-mv-ubV" firstAttribute="bottom" secondItem="5BU-04-nsL" secondAttribute="bottom" constant="555" id="cq4-MF-m67"/>
+                                    <constraint firstItem="cET-l5-oUJ" firstAttribute="bottom" secondItem="5BU-04-nsL" secondAttribute="bottom" constant="281" id="dXz-xX-X89"/>
+                                    <constraint firstItem="cET-l5-oUJ" firstAttribute="trailing" secondItem="5BU-04-nsL" secondAttribute="trailing" id="q4C-nd-xIB"/>
+                                    <constraint firstItem="cET-l5-oUJ" firstAttribute="bottom" secondItem="5BU-04-nsL" secondAttribute="bottom" constant="281" id="v1e-NV-RiZ"/>
+                                    <constraint firstItem="FDt-mv-ubV" firstAttribute="top" secondItem="cET-l5-oUJ" secondAttribute="bottom" constant="20" id="wrh-oY-FbE"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="5BU-04-nsL"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="1Ta-vp-gek"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="KZa-i3-G2q"/>
+                                        <exclude reference="dXz-xX-X89"/>
+                                        <exclude reference="v1e-NV-RiZ"/>
+                                        <exclude reference="CNE-OI-Spl"/>
+                                        <exclude reference="cq4-MF-m67"/>
+                                    </mask>
+                                </variation>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0kE-J4-U0B" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0rn-eA-uQp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0kE-J4-U0B" secondAttribute="bottom" id="4OE-Qb-cEU"/>
+                            <constraint firstItem="0kE-J4-U0B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ZZW-UL-vJo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0kE-J4-U0B" secondAttribute="trailing" id="kre-xV-IKY"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="TMDB" id="OgD-eN-IuT"/>
+                    <connections>
+                        <outlet property="popularView" destination="cET-l5-oUJ" id="XkA-oo-EYU"/>
+                        <outlet property="upcomingView" destination="FDt-mv-ubV" id="lHD-CG-XMS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1042.0289855072465" y="97.767857142857139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="haA-zz-okO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="E0S-y4-zWF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3SI-kv-MjS">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="HVa-DN-CsC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bPt-Ah-2r7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="97.767857142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
