--- a/TMDB/Base.lproj/Main.storyboard
+++ b/TMDB/Base.lproj/Main.storyboard
@@ -73,10 +73,16 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0kE-J4-U0B" secondAttribute="trailing" id="kre-xV-IKY"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="TMDB" id="OgD-eN-IuT"/>
+                    <navigationItem key="navigationItem" title="TMDB" id="OgD-eN-IuT">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="w1g-Yz-Tz6">
+                            <color key="tintColor" systemColor="labelColor"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="popularView" destination="cET-l5-oUJ" id="XkA-oo-EYU"/>
+                        <outlet property="popularViewHeight" destination="gl0-PE-ksR" id="Ayv-ZM-Smy"/>
                         <outlet property="upcomingView" destination="FDt-mv-ubV" id="lHD-CG-XMS"/>
+                        <outlet property="upcomingViewHeight" destination="2BR-Fk-Njd" id="0g4-ow-qaI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -103,6 +109,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
