--- a/TMDB/MovieCollectionView.xib
+++ b/TMDB/MovieCollectionView.xib
@@ -24,7 +24,7 @@
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="gd6-Eu-UgZ">
                     <rect key="frame" x="0.0" y="94" width="414" height="316"/>
                     <color key="backgroundColor" systemColor="systemIndigoColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6y9-rW-TfG">
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EPc-dr-s7N">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -44,6 +44,10 @@
                 <constraint firstAttribute="trailing" secondItem="Zul-uf-Qil" secondAttribute="trailing" constant="20" id="jFp-oL-3Yl"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="collectionView" destination="gd6-Eu-UgZ" id="I7U-eG-93r"/>
+                <outlet property="sectionLabel" destination="Zul-uf-Qil" id="cc6-K8-RXW"/>
+            </connections>
             <point key="canvasLocation" x="131.8840579710145" y="-62.946428571428569"/>
         </view>
     </objects>
