--- a/TMDB/Base.lproj/Main.storyboard
+++ b/TMDB/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--TMDB-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TMDB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="TMDB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,14 +22,12 @@
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cET-l5-oUJ" userLabel="PopularContainer">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="500"/>
-                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="500" id="gl0-PE-ksR"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FDt-mv-ubV" userLabel="UpcomingContainer">
                                         <rect key="frame" x="0.0" y="520" width="414" height="500"/>
-                                        <color key="backgroundColor" systemColor="systemRedColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="500" id="2BR-Fk-Njd"/>
                                         </constraints>
@@ -79,9 +77,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="popularView" destination="cET-l5-oUJ" id="XkA-oo-EYU"/>
+                        <outlet property="popularView" destination="cET-l5-oUJ" id="La2-Pm-kIr"/>
                         <outlet property="popularViewHeight" destination="gl0-PE-ksR" id="Ayv-ZM-Smy"/>
-                        <outlet property="upcomingView" destination="FDt-mv-ubV" id="lHD-CG-XMS"/>
+                        <outlet property="upcomingView" destination="FDt-mv-ubV" id="Mhs-ap-egs"/>
                         <outlet property="upcomingViewHeight" destination="2BR-Fk-Njd" id="0g4-ow-qaI"/>
                     </connections>
                 </viewController>
@@ -114,12 +112,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
