--- a/TMDB/MovieCell.xib
+++ b/TMDB/MovieCell.xib
@@ -15,18 +15,23 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="370"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mrG-Qx-bci">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mrG-Qx-bci">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="290"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vZt-n9-jmf">
-                    <rect key="frame" x="20" y="300" width="374" height="24"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <rect key="frame" x="0.0" y="300" width="394" height="18"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="thT-kp-JWa">
-                    <rect key="frame" x="20" y="332.5" width="374" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Popularity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="thT-kp-JWa">
+                    <rect key="frame" x="0.0" y="326.5" width="394" height="16"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -34,8 +39,8 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="vZt-n9-jmf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="0dd-z9-0nL"/>
-                <constraint firstItem="thT-kp-JWa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="KBS-DP-whP"/>
+                <constraint firstItem="vZt-n9-jmf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="0dd-z9-0nL"/>
+                <constraint firstItem="thT-kp-JWa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="KBS-DP-whP"/>
                 <constraint firstItem="mrG-Qx-bci" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="KQi-Sc-yE4"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="thT-kp-JWa" secondAttribute="trailing" constant="20" id="OzF-Zg-mW3"/>
                 <constraint firstItem="mrG-Qx-bci" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="WV6-BN-yly"/>
@@ -48,6 +53,11 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="imageView" destination="mrG-Qx-bci" id="ooT-gb-TlF"/>
+                <outlet property="popularityLabel" destination="thT-kp-JWa" id="htb-BJ-uOQ"/>
+                <outlet property="titleLabel" destination="vZt-n9-jmf" id="OOZ-iS-OAG"/>
+            </connections>
             <point key="canvasLocation" x="131.8840579710145" y="-62.276785714285708"/>
         </view>
     </objects>
