--- a/TMDB/Base.lproj/Main.storyboard
+++ b/TMDB/Base.lproj/Main.storyboard
@@ -74,6 +74,9 @@
                     <navigationItem key="navigationItem" title="TMDB" id="OgD-eN-IuT">
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="w1g-Yz-Tz6">
                             <color key="tintColor" systemColor="labelColor"/>
+                            <connections>
+                                <action selector="reloadAPIData:" destination="BYZ-38-t0r" id="3rn-3N-yLX"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
