--- a/TMDB/MovieCollectionCell/MovieCell.xib
+++ b/TMDB/MovieCollectionCell/MovieCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -35,11 +36,23 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2P-hW-ml3">
+                    <rect key="frame" x="373" y="0.0" width="41" height="31"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain">
+                        <imageReference key="image" image="heart" catalog="system" symbolScale="medium"/>
+                    </buttonConfiguration>
+                    <connections>
+                        <action selector="toggleFavorite:" destination="iN0-l3-epB" eventType="touchUpInside" id="C1X-zv-r8H"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="vZt-n9-jmf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="0dd-z9-0nL"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="d2P-hW-ml3" secondAttribute="trailing" id="EMZ-xe-zZd"/>
                 <constraint firstItem="thT-kp-JWa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="KBS-DP-whP"/>
                 <constraint firstItem="mrG-Qx-bci" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="KQi-Sc-yE4"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="thT-kp-JWa" secondAttribute="trailing" constant="20" id="OzF-Zg-mW3"/>
@@ -47,6 +60,7 @@
                 <constraint firstItem="thT-kp-JWa" firstAttribute="top" secondItem="vZt-n9-jmf" secondAttribute="bottom" constant="5" id="dYI-Oz-zik"/>
                 <constraint firstItem="vZt-n9-jmf" firstAttribute="top" secondItem="mrG-Qx-bci" secondAttribute="bottom" constant="10" id="g9K-vt-bLu"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="mrG-Qx-bci" secondAttribute="bottom" constant="80" id="gHT-Y4-r77"/>
+                <constraint firstItem="d2P-hW-ml3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="r0a-ea-rVf"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vZt-n9-jmf" secondAttribute="trailing" constant="20" id="vXV-Mt-ddJ"/>
                 <constraint firstItem="mrG-Qx-bci" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="yTG-xg-AEC"/>
             </constraints>
@@ -54,6 +68,7 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="favoriteBtn" destination="d2P-hW-ml3" id="Fw4-09-H61"/>
                 <outlet property="imageView" destination="mrG-Qx-bci" id="ooT-gb-TlF"/>
                 <outlet property="popularityLabel" destination="thT-kp-JWa" id="htb-BJ-uOQ"/>
                 <outlet property="titleLabel" destination="vZt-n9-jmf" id="OOZ-iS-OAG"/>
@@ -62,6 +77,7 @@
         </view>
     </objects>
     <resources>
+        <image name="heart" catalog="system" width="128" height="109"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
